# omtedoen

./: .gitignore  BACKLOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  latest.json  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: .taurignore  Cargo.toml  entitlements.mac.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/components/: CommandPalette.svelte  DayColumn.svelte  FocusView.svelte  MonthView.svelte  ParkingLot.svelte  PersistentQuickAdd.svelte  QuickCapture.svelte  SettingsView.svelte  SomedayList.svelte  SomedayView.svelte  StartupTip.svelte  TaskInput.svelte  TaskItem.svelte  WeekView.svelte
src/lib/core/: date-parser.ts  ids.ts  markdown.ts  merge.ts  recurrence.ts  task-engine.ts  tips.ts  types.ts
src/lib/platform/: index.ts  platform.ts  tauri-platform.ts  web-platform.ts
src/lib/storage/: index.ts  memory-store.ts  sqlite-store.ts  store.ts
src/lib/stores/: app.svelte.ts
src/lib/sync/: icloud-adapter.ts  orchestrator.ts  sync-engine.ts
src/lib/utils/: dates.ts
src/routes/: +layout.svelte  +page.svelte
src/tests/: date-parser.test.ts  merge.test.ts  recurrence.test.ts  task-engine.test.ts
